--- a/.github/workflows/PushToLokalise.yml
+++ b/.github/workflows/PushToLokalise.yml
@@ -20,4 +20,4 @@ jobs:
           base_lang: en
           translations_path: locales
           file_format: json
-          additional_params: "--convert-placeholders --hidden_from_contributors true"
+          additional_params: "--convert-placeholders --hidden-from-contributors"
