--- a/.github/workflows/PullFromLokalise.yml
+++ b/.github/workflows/PullFromLokalise.yml
@@ -13,6 +13,7 @@ jobs:
           fetch-depth: 0
 
       - name: Pull from Lokalise
+        id: lokalise-pull
         uses: bodrovis/Lok-Actions/actions/pull@master
         with:
           api_token: ${{ secrets.LOKALISE_API_TOKEN }}
@@ -20,3 +21,7 @@ jobs:
           translations_path: locales
           file_format: json
           additional_params: "--indentation 2sp --placeholder-format icu"
+
+      - name: Display changed files
+        if: steps.lokalise-pull.outputs.changed_files != ''
+        run: echo "Changed files: ${{ steps.lokalise-pull.outputs.changed_files }}"
