--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -25,4 +25,5 @@ jobs:
 
       - name: Display changed files
         if: steps.lokalise-pull.outputs.changed_files != ''
-        run: echo "Changed files: ${{ steps.lokalise-pull.outputs.changed_files }}"
+        run: |
+          echo "Changed files: ${{ steps.lokalise-pull.outputs.changed_files }}"
