--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -20,6 +20,7 @@ jobs:
           api_token: ${{ secrets.LOKALISE_API_TOKEN }}
           project_id: 5868381966b39e5053ff15.63486389
           translations_path: locales
+          base_lang: en
           file_format: json
           additional_params: "--indentation 2sp --placeholder-format icu"
 
