--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Pull from Lokalise
         id: lokalise-pull
-        uses: bodrovis/Lok-Actions/actions/pull@master
+        uses: lokalise/lokalise-push-action@v0.1.0
         with:
           api_token: ${{ secrets.LOKALISE_API_TOKEN }}
           project_id: 5868381966b39e5053ff15.63486389
