--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -25,4 +25,4 @@ jobs:
           base_lang: en
           file_format: json
           additional_params: "--indentation 2sp --placeholder-format icu"
-          always_pull_base: true
+          always_pull_base: false
