--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Pull from Lokalise
         id: lokalise-pull
-        uses: bodrovis/lokalise-pull-action@locales_folders_list
+        uses: bodrovis/lokalise-pull-action@globs
         with:
           api_token: ${{ secrets.LOKALISE_API_TOKEN }}
           project_id: 5868381966b39e5053ff15.63486389
