--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -26,3 +26,4 @@ jobs:
           file_format: json
           additional_params: "--indentation 2sp --placeholder-format icu"
           always_pull_base: false
+          flat_naming: true
