--- a/.github/workflows/PushToLokalise.yml
+++ b/.github/workflows/PushToLokalise.yml
@@ -23,3 +23,4 @@ jobs:
             i18n
           file_format: json
           additional_params: "--convert-placeholders --hidden-from-contributors"
+          flat_naming: true
