--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -25,5 +25,5 @@ jobs:
           base_lang: en
           file_format: json
           additional_params: "--indentation 2sp --placeholder-format icu"
-          always_pull_base: true
-          flat_naming: true
+          always_pull_base: false
+          flat_naming: false
