--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -3,6 +3,10 @@ name: Demo pull with tags
 on:
   workflow_dispatch:
 
+permissions:
+  contents: write
+  pull-requests: write
+  
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -38,3 +42,4 @@ jobs:
           MERGE_RETRIES: "6"
           MERGE_RETRY_SLEEP: "10000"
           MERGE_DELETE_BRANCH: "true"
+          LOG: "TRACE"
