--- a/.github/workflows/Automerge.yml
+++ b/.github/workflows/Automerge.yml
@@ -20,9 +20,9 @@ jobs:
         uses: pascalgn/automerge-action@v0.16.4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          MERGE_LABELS: "automerge"
-          MERGE_METHOD: "squash"
-          MERGE_RETRIES: "6"
-          MERGE_RETRY_SLEEP: "10000"
-          MERGE_DELETE_BRANCH: "true"
-          LOG: "TRACE"
+          MERGE_LABELS: automerge
+          MERGE_METHOD: squash
+          MERGE_RETRIES: 6
+          MERGE_RETRY_SLEEP: 10000
+          MERGE_DELETE_BRANCH: true
+          LOG: TRACE
