--- a/.github/workflows/Automerge.yml
+++ b/.github/workflows/Automerge.yml
@@ -16,13 +16,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Wait for PR readiness
+        run: sleep 10
+
+      - name: Debug Open PRs
+        run: gh pr list --state open --json number,labels,headRefName,baseRefName,mergeable,mergeStateStatus
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Automerge PRs
         uses: pascalgn/automerge-action@v0.16.4
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           MERGE_LABELS: "automerge"
           MERGE_METHOD: "squash"
-          MERGE_RETRIES: "6"
-          MERGE_RETRY_SLEEP: "10000"
+          MERGE_RETRIES: 6
+          MERGE_RETRY_SLEEP: 10000
           MERGE_DELETE_BRANCH: "true"
-          LOG: "TRACE"
