--- a/.github/workflows/Automerge.yml
+++ b/.github/workflows/Automerge.yml
@@ -37,3 +37,4 @@ jobs:
           MERGE_RETRIES: 6
           MERGE_RETRY_SLEEP: 10000
           MERGE_DELETE_BRANCH: "true"
+          LOG: "DEBUG"
