--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Debug Created Branch
         run: |
-          echo "Branch created: ${{ steps.lokalise-pull.outputs.created_branch }}"
+          echo "Branch created: ${{ steps.lokalise-pull.outputs.branch_name }}"
 
       # - name: Wait for PR creation
       #   run: sleep 10
