--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -37,18 +37,34 @@ jobs:
         run: |
           echo "Branch created: ${{ steps.lokalise-pull.outputs.created_branch }}"
 
-      - name: Automerge PRs
+      - name: Trigger Automerge Workflow
         if: ${{ steps.lokalise-pull.outputs.created_branch != '' }}
-        uses: pascalgn/automerge-action@v0.16.4
+        uses: actions/github-script@v7
         with:
-          ref: ${{ steps.lokalise-pull.outputs.created_branch }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          MERGE_LABELS: "automerge"
-          MERGE_METHOD: "squash"
-          MERGE_RETRIES: 6
-          MERGE_RETRY_SLEEP: 10000
-          MERGE_DELETE_BRANCH: "true"
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            await github.rest.actions.createWorkflowDispatch({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: "automerge.yml",
+              ref: "${{ steps.lokalise-pull.outputs.created_branch }}",
+              inputs: {
+                created_branch: "${{ steps.lokalise-pull.outputs.created_branch }}"
+              }
+            });
+  
+      # - name: Automerge PRs
+      #   if: ${{ steps.lokalise-pull.outputs.created_branch != '' }}
+      #   uses: pascalgn/automerge-action@v0.16.4
+      #   with:
+      #     ref: ${{ steps.lokalise-pull.outputs.created_branch }}
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     MERGE_LABELS: "automerge"
+      #     MERGE_METHOD: "squash"
+      #     MERGE_RETRIES: 6
+      #     MERGE_RETRY_SLEEP: 10000
+      #     MERGE_DELETE_BRANCH: "true"
       # - name: Wait for PR creation
       #   run: sleep 10
   
