--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -38,7 +38,7 @@ jobs:
       #     echo "Branch created: ${{ steps.lokalise-pull.outputs.created_branch }}"
 
       - name: Trigger Automerge Workflow
-        if: ${{ steps.lokalise-pull.outputs.created_branch != '' }}
+        # if: ${{ steps.lokalise-pull.outputs.created_branch != '' }}
         uses: actions/github-script@v7
         with:
           github-token: ${{ github.token }}
