--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -47,7 +47,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               workflow_id: "automerge.yml",
-              ref: master,
+              ref: "master",
             });
   
       # - name: Automerge PRs
