--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -17,28 +17,28 @@ jobs:
         with:
           fetch-depth: 0
 
-      # - name: Pull from Lokalise
-      #   id: lokalise-pull
-      #   uses: lokalise/lokalise-pull-action@custom_labels
-      #   with:
-      #     api_token: ${{ secrets.LOKALISE_API_TOKEN }}
-      #     project_id: 5868381966b39e5053ff15.63486389
-      #     translations_path: |
-      #       locales
-      #       i18n
-      #     base_lang: en
-      #     file_format: json
-      #     additional_params: "--indentation 2sp --placeholder-format icu"
-      #     always_pull_base: true
-      #     flat_naming: true
-      #     skip_include_tags: true
+      - name: Pull from Lokalise
+        id: lokalise-pull
+        uses: lokalise/lokalise-pull-action@custom_labels
+        with:
+          api_token: ${{ secrets.LOKALISE_API_TOKEN }}
+          project_id: 5868381966b39e5053ff15.63486389
+          translations_path: |
+            locales
+            i18n
+          base_lang: en
+          file_format: json
+          additional_params: "--indentation 2sp --placeholder-format icu"
+          always_pull_base: true
+          flat_naming: true
+          skip_include_tags: true
 
       # - name: Debug Created Branch
       #   run: |
       #     echo "Branch created: ${{ steps.lokalise-pull.outputs.created_branch }}"
 
       - name: Trigger Automerge Workflow
-        # if: ${{ steps.lokalise-pull.outputs.created_branch != '' }}
+        if: ${{ steps.lokalise-pull.outputs.created_branch != '' }}
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.PAT_TOKEN }}
@@ -47,7 +47,7 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               workflow_id: "automerge.yml",
-              ref: "master",
+              ref: "${{ steps.lokalise-pull.outputs.created_branch }}",
             });
   
       # - name: Automerge PRs
