--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -32,11 +32,13 @@ jobs:
           always_pull_base: true
           flat_naming: true
           skip_include_tags: true
+          pr_labels: 'automerge,sample'
 
-      # - name: Debug Created Branch
-      #   run: |
-      #     echo "Branch created: ${{ steps.lokalise-pull.outputs.created_branch }}"
-
+      - name: Debug Created Branch
+        run: |
+          echo "Branch created: ${{ steps.lokalise-pull.outputs.created_branch }}"
+          echo "PR created: ${{ steps.lokalise-pull.outputs.pr_created }}"
+      
       - name: Trigger Automerge Workflow
         if: ${{ steps.lokalise-pull.outputs.created_branch != '' }}
         uses: actions/github-script@v7
