--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -39,33 +39,18 @@ jobs:
           echo "Branch created: ${{ steps.lokalise-pull.outputs.created_branch }}"
           echo "PR created: ${{ steps.lokalise-pull.outputs.pr_created }}"
       
-      # - name: Trigger Automerge Workflow
-      #   if: ${{ steps.lokalise-pull.outputs.created_branch != '' }}
-      #   uses: actions/github-script@v7
-      #   with:
-      #     github-token: ${{ secrets.PAT_TOKEN }}
-      #     script: |
-      #       await github.rest.actions.createWorkflowDispatch({
-      #         owner: context.repo.owner,
-      #         repo: context.repo.repo,
-      #         workflow_id: "automerge.yml",
-      #         ref: "${{ steps.lokalise-pull.outputs.created_branch }}",
-      #       });
-  
-      # - name: Automerge PRs
-      #   if: ${{ steps.lokalise-pull.outputs.created_branch != '' }}
-      #   uses: pascalgn/automerge-action@v0.16.4
-      #   with:
-      #     ref: ${{ steps.lokalise-pull.outputs.created_branch }}
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #     MERGE_LABELS: "automerge"
-      #     MERGE_METHOD: "squash"
-      #     MERGE_RETRIES: 6
-      #     MERGE_RETRY_SLEEP: 10000
-      #     MERGE_DELETE_BRANCH: "true"
-      # - name: Wait for PR creation
-      #   run: sleep 10
+      - name: Trigger Automerge Workflow
+        if: steps.lokalise-pull.outputs.created_branch != '' && steps.lokalise-pull.outputs.pr_created == 'true'
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.PAT_TOKEN }}
+          script: |
+            await github.rest.actions.createWorkflowDispatch({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              workflow_id: "automerge.yml",
+              ref: "${{ steps.lokalise-pull.outputs.created_branch }}",
+            });
   
       # - name: Inspect Pull Requests
       #   run: gh pr list --state open --json number,headRefName,labels,baseRefName,title
@@ -76,14 +61,3 @@ jobs:
       #   run: gh pr list --state open --json number,mergeable,mergeStateStatus,headRefName,baseRefName,labels,title
       #   env:
       #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  
-      # - name: Automerge PRs
-      #   uses: pascalgn/automerge-action@v0.16.4
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #     MERGE_LABELS: "automerge"
-      #     MERGE_METHOD: "squash"
-      #     MERGE_RETRIES: "6"
-      #     MERGE_RETRY_SLEEP: "10000"
-      #     MERGE_DELETE_BRANCH: "true"
-      #     LOG: "TRACE"
