--- a/.github/workflows/PushToLokalise.yml
+++ b/.github/workflows/PushToLokalise.yml
@@ -27,6 +27,7 @@ jobs:
           flat_naming: true
           rambo_mode: false
           skip_tagging: false
+          name_pattern: "custom_file.json"
 
       - name: Debug Outputs
         run: |
