--- a/.github/workflows/PushToLokalise.yml
+++ b/.github/workflows/PushToLokalise.yml
@@ -27,7 +27,7 @@ jobs:
           flat_naming: false
           rambo_mode: false
           skip_tagging: false
-          # name_pattern: "**/custom_file_nest.json"
+          name_pattern: "en/**/custom_file_nest.json"
 
       - name: Debug Outputs
         run: |
