--- a/.github/workflows/PushToLokalise.yml
+++ b/.github/workflows/PushToLokalise.yml
@@ -24,10 +24,11 @@ jobs:
             i18n
           file_format: json
           additional_params: "--convert-placeholders --hidden-from-contributors"
-          flat_naming: false
+          flat_naming: true
           rambo_mode: false
           skip_tagging: false
-          name_pattern: "en/**/custom_*.json"
+          # name_pattern: "en/**/custom_*.json"
+          name_pattern: "**/custom_*.json"
 
       - name: Debug Outputs
         run: |
