--- a/.github/workflows/PushToLokalise.yml
+++ b/.github/workflows/PushToLokalise.yml
@@ -13,7 +13,7 @@ jobs:
           fetch-depth: 0
 
       - name: Push to Lokalise
-        uses: lokalise/lokalise-push-action@custom_file_naming
+        uses: lokalise/lokalise-push-action@main
         id: lokalise-push
         with:
           api_token: ${{ secrets.LOKALISE_API_TOKEN }}
@@ -25,7 +25,7 @@ jobs:
           file_format: json
           additional_params: "--convert-placeholders --hidden-from-contributors"
           flat_naming: true
-          rambo_mode: false
+          rambo_mode: true
           skip_tagging: false
           # name_pattern: "en/**/custom_*.json"
           name_pattern: "custom_*.json"
