--- a/.github/workflows/PushToLokalise.yml
+++ b/.github/workflows/PushToLokalise.yml
@@ -27,8 +27,8 @@ jobs:
           flat_naming: true
           rambo_mode: false
           skip_tagging: false
-          # name_pattern: "en/**/custom_*.json"
-          name_pattern: "custom_*.json"
+          name_pattern: "en/**/custom_*.json"
+          # name_pattern: "custom_*.json"
 
       - name: Debug Outputs
         run: |
