--- a/.github/workflows/PushToLokalise.yml
+++ b/.github/workflows/PushToLokalise.yml
@@ -25,7 +25,7 @@ jobs:
           file_format: json
           additional_params: "--convert-placeholders --hidden-from-contributors"
           flat_naming: true
-          rambo_mode: true
+          rambo_mode: false
           skip_tagging: true
           # name_pattern: "en/**/custom_*.json"
           name_pattern: "custom_file.json"
