--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -1,26 +1,26 @@
-name: Automerge PRs
+# name: Automerge PRs
 
-on:
-  workflow_dispatch:
+# on:
+#   workflow_dispatch:
 
-permissions:
-  contents: write
-  pull-requests: write
+# permissions:
+#   contents: write
+#   pull-requests: write
 
-jobs:
-  automerge:
-    runs-on: ubuntu-latest
+# jobs:
+#   automerge:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+#     steps:
+#       - name: Checkout Repository
+#         uses: actions/checkout@v4
 
-      - name: Automerge PRs
-        uses: pascalgn/automerge-action@v0.16.4
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          MERGE_LABELS: "automerge"
-          MERGE_METHOD: "squash"
-          MERGE_RETRIES: 6
-          MERGE_RETRY_SLEEP: 10000
-          MERGE_DELETE_BRANCH: "true"
+#       - name: Automerge PRs
+#         uses: pascalgn/automerge-action@v0.16.4
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#           MERGE_LABELS: "automerge"
+#           MERGE_METHOD: "squash"
+#           MERGE_RETRIES: 6
+#           MERGE_RETRY_SLEEP: 10000
+#           MERGE_DELETE_BRANCH: "true"
