--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -27,7 +27,7 @@ jobs:
             locales
             i18n
           base_lang: en
-          file_format: structured_json
+          file_format: json_structured
           file_ext: json
           additional_params: "--indentation 2sp --placeholder-format icu"
           always_pull_base: false
