--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -34,6 +34,7 @@ jobs:
           flat_naming: true
           skip_include_tags: true
           pr_labels: 'automerge,sample'
+          skip_original_filenames: true
 
       - name: Debug Created Branch
         run: |
