--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -33,7 +33,7 @@ jobs:
           additional_params: "--indentation 2sp --placeholder-format icu"
           always_pull_base: false
           flat_naming: true
-          skip_include_tags: true
+          # skip_include_tags: true
           pr_labels: 'automerge,sample'
           # skip_original_filenames: true
  
