--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -29,7 +29,14 @@ jobs:
           base_lang: en
           file_format: json_structured
           file_ext: json
-          additional_params: "--indentation 2sp --placeholder-format icu"
+          additional-params: >
+            --directory-prefix %LANG_ISO%
+            --indentation 4sp
+            --json-unescaped-slashes=true
+            --export-empty-as skip
+            --export-sort a_z
+            --replace-breaks=false
+            --language-mapping='[{"original_language_iso":"en_US","custom_language_iso":"en-US"},{"original_language_iso":"fr_CA","custom_language_iso":"fr-CA"},{"original_language_iso":"es_MX","custom_language_iso":"es-MX"}]'
           always_pull_base: false
           flat_naming: true
           # skip_include_tags: true
