--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -36,7 +36,7 @@ jobs:
             --export-empty-as skip
             --export-sort a_z
             --replace-breaks=false
-            --language-mapping='[{"original_language_iso":"en_US","custom_language_iso":"en-US"},{"original_language_iso":"fr_CA","custom_language_iso":"fr-CA"},{"original_language_iso":"es_MX","custom_language_iso":"es-MX"}]'
+            --language-mapping="'[{\"original_language_iso\":\"en_US\",\"custom_language_iso\":\"en-US\"},{\"original_language_iso\":\"fr_CA\",\"custom_language_iso\":\"fr-CA\"}]'"
           always_pull_base: false
           flat_naming: true
           # skip_include_tags: true
