--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -27,17 +27,17 @@ jobs:
             locales
             i18n
           base_lang: en
-          file_format: json_structured
-          file_ext: json
-          additional_params: |
-            --directory-prefix=%LANG_ISO%
-            --indentation=4sp
-            --json-unescaped-slashes=true
-            --export-empty-as=skip
-            --export-sort=a_z
-            --replace-breaks=false
-            --language-mapping=[{"original_language_iso":"en_US","custom_language_iso":"en-US"}]
-          always_pull_base: false
+          file_format: json
+          # file_ext: json
+          # additional_params: |
+          #   --directory-prefix=%LANG_ISO%
+          #   --indentation=4sp
+          #   --json-unescaped-slashes=true
+          #   --export-empty-as=skip
+          #   --export-sort=a_z
+          #   --replace-breaks=false
+          #   --language-mapping=[{"original_language_iso":"en_US","custom_language_iso":"en-US"}]
+          always_pull_base: true
           flat_naming: true
           # skip_include_tags: true
           pr_labels: 'automerge,sample'
