--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -39,7 +39,7 @@ jobs:
           #   --language-mapping=[{"original_language_iso":"en_US","custom_language_iso":"en-US"}]
           always_pull_base: true
           flat_naming: true
-          # skip_include_tags: true
+          skip_include_tags: true
           pr_labels: 'automerge,sample'
           # skip_original_filenames: true
           # async_mode: true
