--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -43,6 +43,7 @@ jobs:
           pr_labels: 'automerge,sample'
           # skip_original_filenames: true
           # async_mode: true
+          override_branch_name: 'custom_branch'
  
       - name: Debug Created Branch
         run: |
