--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -43,8 +43,8 @@ jobs:
           pr_labels: 'automerge,sample'
           # skip_original_filenames: true
           # async_mode: true
-          override_branch_name: 'custom_branch'
-          force_push: true
+          # override_branch_name: 'custom_branch'
+          # force_push: true
  
       - name: Debug Created Branch
         run: |
