--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -32,6 +32,7 @@ jobs:
           flat_naming: true
           file_format: json
           post_process_command: "python scripts/replace_test.py"
+          post_process_strict: true
           # additional_params: |
           #   --indentation=2sp
           #   --export-sort=a_z
