--- a/.github/workflows/PushToLokalise.yml
+++ b/.github/workflows/PushToLokalise.yml
@@ -13,7 +13,7 @@ jobs:
           fetch-depth: 0
 
       - name: Push to Lokalise
-        uses: lokalise/lokalise-push-action@known_commit
+        uses: lokalise/lokalise-push-action@main
         id: lokalise-push
         with:
           api_token: ${{ secrets.LOKALISE_API_TOKEN }}
@@ -27,11 +27,11 @@ jobs:
           additional_params: |
             --convert-placeholders
             --hidden-from-contributors
-          flat_naming: true
+          # flat_naming: true
           rambo_mode: false
           skip_tagging: true
           use_tag_tracking: false
-          # name_pattern: "en/**/custom_*.json"
+          name_pattern: "en/**/CuStom_*.json"
           # name_pattern: "custom_file.json"
 
       - name: Debug Outputs
