--- a/.github/workflows/PushToLokalise.yml
+++ b/.github/workflows/PushToLokalise.yml
@@ -31,7 +31,7 @@ jobs:
           rambo_mode: false
           skip_tagging: true
           use_tag_tracking: false
-          name_pattern: "en/**/CuStom_*.json"
+          name_pattern: "en/**/custom_*.json"
           # name_pattern: "custom_file.json"
 
       - name: Debug Outputs
