--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -24,15 +24,15 @@ jobs:
           
       - name: Pull from Lokalise
         id: lokalise-pull
-        uses: lokalise/lokalise-pull-action@postprocess
+        uses: lokalise/lokalise-pull-action@solidify_logic_and_edge_cases
         with:
           api_token: ${{ secrets.LOKALISE_API_TOKEN }}
           project_id: 5868381966b39e5053ff15.63486389
           translations_path: messages
           flat_naming: true
           file_format: json
-          post_process_command: "python scripts/replace_test.py"
-          post_process_strict: true
+          # post_process_command: "python scripts/replace_test.py"
+          # post_process_strict: true
           # additional_params: |
           #   --indentation=2sp
           #   --export-sort=a_z
