--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -31,6 +31,7 @@ jobs:
           translations_path: messages
           flat_naming: true
           file_format: json
+          download_timeout: 1
           # post_process_command: "python scripts/replace_test.py"
           # post_process_strict: true
           # additional_params: |
