--- a/.github/workflows/PullLokalise.yml
+++ b/.github/workflows/PullLokalise.yml
@@ -30,7 +30,7 @@ jobs:
           project_id: 5868381966b39e5053ff15.63486389
           translations_path: messages
           flat_naming: true
-          file_format: csv
+          file_format: srt
           # post_process_command: "python scripts/replace_test.py"
           # post_process_strict: true
           # additional_params: |
